--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,6 @@
 spring.application.name=SpringThymeHtmxStarter
 spring.mvc.static-path-pattern=/**
+spring.datasource.url=jdbc:h2:mem:optimiser-db;MODE=MSSQLServer
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
